<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <se.johan.wendler.view.InitPercentView
            android:id="@+id/init_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/tv_week_one"/>

        <se.johan.wendler.view.InitPercentView
            android:id="@+id/init_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/tv_week_two"/>

        <se.johan.wendler.view.InitPercentView
            android:id="@+id/init_three"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/tv_week_three"/>

        <se.johan.wendler.view.InitPercentView
            android:id="@+id/init_four"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/tv_week_four"/>

        <RadioGroup
            android:layout_marginTop="25dp"
            android:gravity="start"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_fresh"
                android:id="@+id/rbFresh"
                android:checked="true"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_heavy"
                android:id="@+id/rbHeavy"
                android:checked="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb_custom"
                android:id="@+id/rbCustom"
                android:checked="false"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>