<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <se.johan.wendler.view.InitWeightView
            android:id="@+id/init_press"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/press"/>

        <se.johan.wendler.view.InitWeightView
            android:id="@+id/init_deadlift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/deadlift"/>

        <se.johan.wendler.view.InitWeightView
            android:id="@+id/init_bench"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/bench"/>

        <se.johan.wendler.view.InitWeightView
            android:id="@+id/init_squat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/squat"/>

        <Button
            android:id="@+id/btn_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_percentage"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>