<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/spacing_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <se.johan.wendler.ui.view.InitWeightView
            android:id="@+id/init_press"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:weightTitle="@string/press"/>

        <se.johan.wendler.ui.view.InitWeightView
            android:id="@+id/init_deadlift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:weightTitle="@string/deadlift"
            android:paddingTop="@dimen/spacing_medium"/>

        <se.johan.wendler.ui.view.InitWeightView
            android:id="@+id/init_bench"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:weightTitle="@string/bench"
            android:paddingTop="@dimen/spacing_medium"/>

        <se.johan.wendler.ui.view.InitWeightView
            android:id="@+id/init_squat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:weightTitle="@string/squat"
            android:paddingTop="@dimen/spacing_medium"/>

        <Button
            android:id="@+id/btn_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_percentage"
            android:paddingTop="@dimen/spacing_medium"/>
    </LinearLayout>
</ScrollView>