<?xml version="1.0" encoding="utf-8"?>

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_below="@+id/tv_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <se.johan.wendler.view.FloatLabelLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wendlerized.FloatLabel">

            <se.johan.wendler.view.FilterEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:id="@+id/et_set_one"
                android:hint="@string/hint_set_one"
                app:min="1"
                app:max="100"
                style="@style/CenterEditText"/>
        </se.johan.wendler.view.FloatLabelLayout>

        <se.johan.wendler.view.FloatLabelLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wendlerized.FloatLabel">

            <se.johan.wendler.view.FilterEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:id="@+id/et_set_two"
                android:hint="@string/hint_set_two"
                app:min="1"
                app:max="100"
                style="@style/CenterEditText"/>
        </se.johan.wendler.view.FloatLabelLayout>

        <se.johan.wendler.view.FloatLabelLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:floatLabelTextAppearance="@style/TextAppearance.Wendlerized.FloatLabel">

            <se.johan.wendler.view.FilterEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:id="@+id/et_set_three"
                android:hint="@string/hint_set_three"
                app:min="1"
                app:max="100"
                style="@style/CenterEditText"/>
        </se.johan.wendler.view.FloatLabelLayout>
    </LinearLayout>
</merge>